--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>This Is New Repo</h1>
-    <h2>this is a new feature</h2>
+    <h2>this is a new feature (dropdown)</h2>
 </body>
 </html>
